# helia-profiler

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HARDWARE_TEST_HANDOFF.md  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  hpx_kws_all_counters.yml  hpx_kws_aot.yml  hpx_kws_joulescope.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  deploy-pages.yml  hardware-validation.yml  publish.yml
configs/: tiny_wav2letter_aot.yaml
configs/mlperf_tiny/: ad_aot_power_ap510_atfe_tcm.yaml  ad_aot_power_ap510_atfe_tcm_hp.yaml  ad_rt_power_ap330.yaml  ad_rt_power_ap510.yaml  ad_rt_power_ap510_armclang.yaml  ad_rt_power_ap510_atfe.yaml  ic_aot_power_ap510_atfe_tcm.yaml  ic_aot_power_ap510_atfe_tcm_hp.yaml  ic_rt_power_ap330.yaml  ic_rt_power_ap510.yaml  ic_rt_power_ap510_armclang.yaml  ic_rt_power_ap510_atfe.yaml  kws_aot_power.yaml  kws_aot_power_ap4_kxr.yaml  kws_aot_power_ap510_atfe_extreme.yaml  kws_aot_power_ap510_atfe_tcm.yaml  kws_aot_power_ap510_atfe_tcm_hp.yaml  kws_aot_power_ap510b.yaml  kws_rt_power.yaml  kws_rt_power_ap3.yaml  kws_rt_power_ap330.yaml  kws_rt_power_ap330_nopower.yaml  kws_rt_power_ap330_noprofile.yaml  kws_rt_power_ap330_sram.yaml  kws_rt_power_ap330_swo.yaml  kws_rt_power_ap4_evb.yaml  kws_rt_power_ap4_kxr.yaml  kws_rt_power_ap510.yaml  kws_rt_power_ap510_armclang.yaml  kws_rt_power_ap510_atfe.yaml  kws_rt_power_ap510_js320.yaml  kws_rt_power_ap510b.yaml  kws_rt_power_swo.yaml  kws_rt_power_uart.yaml  kws_rt_power_usb_cdc.yaml  kws_rt_setup_cost.yaml  vww_aot_power_ap330.yaml  vww_aot_power_ap330_hotpath_tcm.yaml  vww_aot_power_ap510_atfe_tcm.yaml  vww_aot_power_ap510_atfe_tcm_hp.yaml  (+5 more)
docs/: index.md
docs/architecture/: adding-an-engine.md  capture.md  engine-adapters.md  firmware.md  index.md  pipeline.md  profile-power-refactor-plan.md  public-release-readiness.md  regression-dashboard.md  validation-bundle-compare.md
docs/examples/: basic-profiling.md  engine-comparison.md  index.md  interactive-python.md  per-layer.md  power-profiling.md  tflm-baseline.md  toolchain-comparison.md
docs/getting-started/: first-profile.md  index.md  install.md  quickstart.md
docs/guide/: boards.md  configuration.md  engines.md  hardware-ci.md  memory.md  model-explorer.md  output.md  pmu-counters.md  power.md  releasing.md  toolchains.md  transports.md
docs/guides/: index.md  memory-placement-tuning.md  validating-a-board-setup.md
docs/reference/: analyze.md  boards.md  cache.md  compare.md  configuration.md  doctor.md  engines.md  index.md  ports.md  power-on.md  probes.md  profile.md  target.md  validate.md
docs/reference/api/: config.md  errors.md  index.md  power-results.md  profile.md  results.md  session.md
docs/stylesheets/: extra.css
examples/notebooks/: hpx_walkthrough.ipynb  hpx_walkthrough_v2.ipynb
examples/quickstart/: hpx_aot.yml  hpx_aot_armclang.yml  hpx_aot_power.yml  hpx_full_sweep.yml  hpx_rt.yml  hpx_rt_armclang.yml  hpx_rt_source.yml  hpx_tflm_baseline.yml  hpx_verify_r4.yml  hpx_verify_r5.yml  hpx_verify_r6.yml
examples/quickstart/results_aot/: profile_results.csv  run_metadata.json  summary.json
examples/quickstart/results_aot_armclang/: aot_operator_manifest.json  profile_results.csv  run_metadata.json  summary.json
examples/quickstart/results_aot_power/: profile_results.csv  run_metadata.json  summary.json
examples/quickstart/results_rt/: profile_results.csv  run_metadata.json  summary.json
examples/quickstart/results_rt_armclang/: profile_results.csv  run_metadata.json  summary.json
experiments/mlperf_tiny/: ap330_hpx_vs_autodeploy.md  ap510_hpx_vs_autodeploy.md
experiments/oura-workshop/configs/: kws_aot_ap330_js110.yaml  kws_rt_ap330_js110.yaml
experiments/oura-workshop/results/: kws_ap330_js110_comparison.json
local-configs/: README.md
local-experiments/: README.md
local-scripts/: README.md
results/mlperf_tiny/: ap330_hpx_vs_autodeploy.md  ap510_hpx_vs_autodeploy.md
src/helia_profiler/: __init__.py  api.py  artifacts.py  cli.py  compare.py  config.py  console.py  counters.py  doctor.py  errors.py  examples.py  jlink.py  model_analysis.py  nsx.py  pipeline.py  placement.py  platform.py  presentation.py  profiler.py  result_manifest.py  results.py  session.py  target_lifecycle.py  toolchain_probe.py  toolchains.py  usb_identity.py
src/helia_profiler/capture/: __init__.py  parser.py  power_terminal.py  readiness.py  rtt_reader.py  rtt_symbol.py  serial_reader.py  timing.py  transport.py  uart_reader.py  usb_reader.py
tests/: conftest.py  test_aot_manifest.py  test_aot_memory_plan.py  test_aot_placement_rulesets.py  test_api_reference_docs.py  test_api_result.py  test_api_stability.py  test_build_firmware_stage.py  test_cli_cache.py  test_cli_nsx_module.py  test_cli_profile.py  test_cli_typer_app.py  test_collect_power_terminal.py  test_comparability.py  test_compare.py  test_compare_cmd.py  test_comparison_profile.py  test_compiler_launcher.py  test_config.py  test_config_reference_docs.py  test_console_errors.py  test_console_progress.py  test_counters.py  test_doctor.py  test_ensure_powered.py  test_errors.py  test_example_models.py  test_firmware.py  test_firmware_errors.py  test_flash_stage.py  test_helia_rt_adapter.py  test_jlink.py  test_model_analysis.py  test_model_explorer.py  test_notebook_showcase.py  test_notebook_walkthrough.py  test_nsx_cli.py  test_op_resolver.py  test_package_layout.py  test_parser.py  (+31 more)
tests/contracts/: __init__.py  conftest.py  test_board_resolution.py  test_firmware_render_snapshots.py  test_power_lockstep.py  test_report_golden.py  test_reset_ownership.py  test_transport_selection.py
tests/fixtures/heliart_nsx/: CMakeLists.txt  nsx-module.yaml
tests/validation/: README.md  __init__.py  conftest.py  test_mlperf_tiny.py
tools/: build_regression_dataset.py  gen_config_reference.py  gen_example_model.py  run_ap3_sweep.sh  sync_pmu_catalog.py  verify_distribution.py
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx
web/worker/: index.ts
(+303 files in other folders)
