[project]
name = "helia-profiler"
version = "0.1.0"
description = "Profile LiteRT models on Ambiq Apollo hardware"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "rich>=13.0",
    "pyserial>=3.5",
    "pylink-square>=0.14.0",
    "neuralspotx==0.5.1",  # TODO: Relax to >=0.x,<1.0 once NSX API is stable
]

[project.optional-dependencies]
# heliaAOT — Ambiq's AOT compiler. Not yet published to PyPI, so we pin to a
# release tag on the upstream repo. Users can override with their own
# version, fork, or local checkout, e.g.:
#   pip install --upgrade 'helia-aot @ git+https://github.com/AmbiqAI/helia-aot.git@v0.15.0'
#   pip install 'git+https://github.com/<your-fork>/helia-aot.git@<ref>'
#   pip install -e /path/to/helia-aot
# At runtime, hpx enforces a minimum version (see HELIAAOT_MIN_VERSION
# in src/helia_profiler/engines/helia_aot.py).
# TODO: Switch to PyPI package once helia-aot is published (e.g. "helia-aot>=0.14,<1.0")
aot = ["helia-aot @ git+https://github.com/AmbiqAI/helia-aot.git@v0.14.0"]
analysis = ["ai-edge-litert>=1.0", "flatbuffers>=24.0"]
power = ["pyjoulescope_driver>=1.0"]

[project.scripts]
hpx = "helia_profiler.cli:main"

[dependency-groups]
lint = ["ruff>=0.11.0"]
test = ["pytest>=8.0", "pytest-timeout>=2.3"]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.15",
    "zensical>=0.0.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["helia_profiler", "helia_profiler.*"]

[tool.setuptools.package-data]
helia_profiler = ["firmware/templates/**/*", "engines/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not hardware'"
markers = [
    "hardware: requires physical target hardware (EVB + J-Link, optional Joulescope). Excluded by default; run via `hpx validate` or `pytest -m hardware`.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
# TODO: Remove this override once neuralspotx is published to PyPI
neuralspotx = { git = "https://github.com/AmbiqAI/neuralspotx", tag = "neuralspotx-v0.5.1" }

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
