[project]
name = "helia-profiler"
version = "0.1.0"
description = "Profile LiteRT models on Ambiq Apollo hardware"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "rich>=13.0",
    "pyserial>=3.5",
    "pylink-square>=0.14.0",
    "neuralspotx>=0.7.5,<0.8.0",
    "numpy>=2.1,<3",
    "pyjoulescope_driver>=1.0",
]

[project.optional-dependencies]
aot = ["helia-aot>=0.18.0"]
analysis = ["ai-edge-litert>=1.0", "flatbuffers>=24.0"]
# Kept for backward compatibility — pyjoulescope_driver is now a core dep.
power = []

[project.scripts]
hpx = "helia_profiler.cli:main"

[dependency-groups]
lint = ["ruff>=0.11.0,<0.12"]
test = ["pytest>=8.0", "pytest-timeout>=2.3"]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.15",
    "zensical>=0.0.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["helia_profiler", "helia_profiler.*"]

[tool.setuptools.package-data]
helia_profiler = ["firmware/templates/**/*", "engines/templates/**/*", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not hardware'"
markers = [
    "hardware: requires physical target hardware (EVB + J-Link, optional Joulescope). Excluded by default; run via `hpx validate` or `pytest -m hardware`.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = [
    "E741",
    "F401",
    "F841",
    "I001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
