[project]
name = "helia-profiler"
version = "0.1.1"
description = "Profile LiteRT models on Ambiq Apollo hardware"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
    "src/helia_profiler/vendor/segger_rtt/LICENSE.md",
]
keywords = ["ambiq", "apollo", "embedded", "joulescope", "litert", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "rich>=13.0",
    "pyserial>=3.5",
    "pylink-square>=0.14.0",
    "neuralspotx>=0.7.8,<0.8.0",
    "numpy>=2.1,<3",
    "pyjoulescope-driver>=2.2.12,<2.3.0; python_version < '3.12'",
    "pyjoulescope-driver>=2.3.2,<3; python_version >= '3.12'",
    "pydantic>=2.7,<3",
    "typer>=0.16",
    "click>=8.2",
]

[project.optional-dependencies]
aot = [
    "helia-aot>=0.18.0",
    "ai-edge-litert>=2.1.6,<2.2",
    "backports-strenum<1.3",
]
analysis = [
    "ai-edge-litert>=2.1.6,<2.2",
    "backports-strenum<1.3",
    "flatbuffers>=24.0",
]

[project.scripts]
hpx = "helia_profiler.cli:main"

[project.urls]
Documentation = "https://ambiqai.github.io/helia-profiler/"
Issues = "https://github.com/AmbiqAI/helia-profiler/issues"
Repository = "https://github.com/AmbiqAI/helia-profiler"

[dependency-groups]
lint = ["ruff>=0.11.0,<0.12"]
test = ["pytest>=8.0", "pytest-timeout>=2.3"]
notebook = ["ipykernel>=6,<8"]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.15",
    "zensical>=0.0.51,<0.1",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["helia_profiler", "helia_profiler.*"]

[tool.setuptools.package-data]
helia_profiler = [
    "firmware/templates/**/*",
    "engines/templates/**/*",
    "data/*.json",
    "data/models/*.json",
    "data/models/*.tflite",
    "vendor/segger_rtt/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not hardware'"
markers = [
    "hardware: requires physical target hardware (EVB + J-Link, optional Joulescope). Excluded by default; run via `hpx validate` or `pytest -m hardware`.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = [
    "E741",
    "F401",
    "F841",
    "I001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
